[package]
name = "pmw2_collada"
version = "0.1.0"
authors = ["Isaac Lozano <109lozanoi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nxf = { path = "../nxf" }
sf = { path = "../sf" }
xml-rs = "0.8.2"
getopts = "0.2"